killer/netpol/db1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: db1
  name: db1-0
  namespace: project-snake
spec:
  containers:
  - image: nginx
    name: db1-0
    ports:
    - containerPort: 1111
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
