killer/netpol/db2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: db2
  name: db2-0
  namespace: project-snake
spec:
  containers:
  - image: nginx
    name: db2-0
    ports:
    - containerPort: 2222
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
