killer/netpol/vault.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: vault-0
  name: vault-0
  namespace: project-snake
spec:
  containers:
  - image: nginx
    name: vault-0
    ports:
    - containerPort: 3333
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
